[project]
name = "envguard"
version = "0.1.0"
description = "Minimal and safe environment variable validator and loader for Python apps"
authors = [
    { name="Your Name", email="you@example.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["envguard"]
